--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Team Dish ===",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/index.js",
     "go": "nodemon src/index.js"
   },
