--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "jest": "jest && codecov",
     "start": "node src/index.js",
     "go": "nodemon src/index.js",
     "coverage": "jest --coverage",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/FAC-Sixteen/dish#readme",
   "devDependencies": {
+    "codecov": "^3.5.0",
     "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "istanbul": "^0.4.5",
@@ -41,5 +43,9 @@
     "path": "^0.12.7",
     "pg": "^7.11.0",
     "serve-favicon": "^2.5.0"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
