--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
-sudo: false
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -e TRAVIS_NODE_VERSION
+install:
+  - npm install
+  - npm install -g codecov
 language: node_js
 node_js:
-  - "10"
-branches:
-  only:
-  - master
-cache:
-  directories:
-  - node_modules
-before_install:
-- npm update
-install:
-- npm install
+  - node
 script:
-- npm test
-- npm run coverage
+  - npm test
+  - npm run coverage
+services:
+  - postgresql
