--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Team Dish ===",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --expand",
+    "test": "NODE_ENV=test jest --expand --runInBand --detectOpenHandles",
     "start": "node src/index.js",
     "go": "nodemon src/index.js",
     "coverage": "jest --coverage",
