--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
+
+before_script:
+  - "psql --version"
+  - "psql -c 'CREATE DATABASE travis_ci_test;' -U postgres"
+  - 'psql -c "CREATE USER test WITH PASSWORD ''1234'';" -U postgres'
+  - 'psql -c "ALTER DATABASE travis_ci_test OWNER TO test;" -U postgres'
+env:
+  global:
+    - "TEST_DB_URL=postgres://test:1234@localhost:5432/travis_ci_test"
+    - CODECOV_TOKEN=1ce5d98d-1dec-4241-8e42-5fc1c8f9a63f
 after_success:
   - bash <(curl -s https://codecov.io/bash) -e TRAVIS_NODE_VERSION
 install:
@@ -9,4 +19,7 @@ node_js:
 script:
   - npm test
   - npm run coverage
+
+services:
+  - postgresql
 
