--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_script:
   - "psql -c 'CREATE DATABASE travis_ci_test;' -U postgres"
   - 'psql -c "CREATE USER test WITH PASSWORD ''1234'';" -U postgres'
   - 'psql -c "ALTER DATABASE travis_ci_test OWNER TO test;" -U postgres'
+  - 'npm run build'
 env:
   global:
     - "TEST_DB_URL=postgres://test:1234@localhost:5432/travis_ci_test"
