--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "tape": "^4.10.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "env2": "^2.2.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "path": "^0.12.7",
     "pg": "^7.11.0",
