--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ cache:
   - node_modules
 before_install:
 - npm update
+after_success:
+- bash <(curl -s https://codecov.io/bash) -e TRAVIS_NODE_VERSION
 install:
 - npm install
 script:
